switch tests to junit5 and upgrade to osgi-test 1.0.0 at the same time
Signed-off-by: Raymond Augé <rotty3000@apache.org>